finish mobile view

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="img-container"> 
         <img src="images/image-header-mobile.jpg" alt="#">
       </div>
-      <h1 class="card-header">Get insights that help your business grow.</h1>
+      <h1 class="card-header">Get <span class="highlighted-words">insights</span> that help your business grow.</h1>
       <p class="card-info">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
       <ul class="card-stats">
         <li class="card-stat">
