Add desktop view

--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
       <div class="img-container"> 
         <img src="images/image-header-mobile.jpg" alt="#">
       </div>
-      <h1 class="card-header">Get <span class="highlighted-words">insights</span> that help your business grow.</h1>
-      <p class="card-info">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
-      <ul class="card-stats">
-        <li class="card-stat">
-          <h1>10k+</h1> 
-          <h2>companies</h2>
-        </li>
-        <li class="card-stat">
-          <h1>314</h1> 
-          <h2>templates</h2>
-        </li>
-        <li class="card-stat">
-          <h1>12m+</h1>
-          <h2>queries<h2>
-        </li>
-      </ul>
+      <div class="text-container">
+        <h1 class="card-header">Get <span class="highlighted-words">insights</span> that help your business grow.</h1>
+        <p class="card-info">Discover the benefits of data analytics and make better decisions regarding revenue, customer experience, and overall efficiency.</p>
+        <ul class="card-stats">
+          <li class="card-stat">
+            <h1>10k+</h1> 
+            <h2>companies</h2>
+          </li>
+          <li class="card-stat">
+            <h1>314</h1> 
+            <h2>templates</h2>
+          </li>
+          <li class="card-stat">
+            <h1>12m+</h1>
+            <h2>queries<h2>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
