--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </li>
           <li class="card-stat">
             <h1>12m+</h1>
-            <h2>queries<h2>
+            <h2>queries</h2>
           </li>
         </ul>
       </div>
